# antidote-haskell-client

./: .gitignore
antidotedb/: README.md  antidotedb.cabal
antidotedb/contrib/: Antidote.proto
antidotedb/src/Antidote/: ApbAbortTransaction.hs  ApbBoundObject.hs  ApbCommitResp.hs  ApbCommitTransaction.hs  ApbCounterUpdate.hs  ApbCrdtReset.hs  ApbFlagUpdate.hs  ApbGetCounterResp.hs  ApbGetFlagResp.hs  ApbGetIntegerResp.hs  ApbGetMVRegResp.hs  ApbGetMapResp.hs  ApbGetRegResp.hs  ApbGetSetResp.hs  ApbIntegerUpdate.hs  ApbMapEntry.hs  ApbMapKey.hs  ApbMapNestedUpdate.hs  ApbMapUpdate.hs  ApbOperationResp.hs  ApbReadObjectResp.hs  ApbReadObjects.hs  ApbReadObjectsResp.hs  ApbRegUpdate.hs  ApbSetUpdate.hs  ApbStartTransaction.hs  ApbStartTransactionResp.hs  ApbStaticReadObjects.hs  ApbStaticReadObjectsResp.hs  ApbStaticUpdateObjects.hs  ApbTxnProperties.hs  ApbUpdateObjects.hs  ApbUpdateOp.hs  ApbUpdateOperation.hs  CRDT_type.hs  SetOpType.hs
antidotedb/src/Database/: Antidote.hs
