name:                antidotedb
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/antidotedb#readme
license:             Apache
license-file:        LICENSE
author:              Annette Bieniusa, Adriaan Middelkoop
maintainer:          bieniusa@cs.uni-kl.com
copyright:           2017 Annette Bieniusa, Adriaan Middlekoop
category:            Database
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.Antidote
  build-depends:       base >= 4.7 && < 5, protobuf-simple, bytestring, network-simple, binary, containers, mtl,
                       resource-pool, io-streams
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/antidotedb
